Fix intl-7 test failure on Solaris 11.
* gettext-tools/tests/init.cfg (prepare_locale_): Preserve the existing contents
of "$2".
* gettext-tools/tests/intl-7: While calling prepare_locale_, ensure that fr_FR
has higher priority than fr.

--- a/gettext-tools/tests/init.cfg
+++ b/gettext-tools/tests/init.cfg
@@ -22,7 +22,19 @@ prepare_locale_ ()
   if test "$1" != "$2" && test "$GLIBC2" = no; then
     case "$host_os" in
       solaris2.11)
-        cp -R "$1" "$2"
+        # Copy the contents of "$1" into "$2", preserving the existing contents
+        # of "$2".
+        mkdir -p "$2"
+        for d in `cd "$1" && find . -type d -print | grep -v '^[.]$' | sed -e 's|^[.]/||'`; do
+          mkdir -p "$2/$d"
+        done
+        for f in `cd "$1" && find . -type f -print`; do
+          if test -f "$2/$f"; then
+            :
+          else
+            ln "$1/$f" "$2/$f"
+          fi
+        done
         ;;
     esac
   fi
