build: Remove unused -I options from AM_CPPFLAGS.
* gnulib-local/modules/gettext-runtime-misc (Makefile.am): Remove
-I$(top_srcdir)/intl from AM_CPPFLAGS.
* gettext-runtime/tests/Makefile.am (AM_CPPFLAGS): Set to empty.
* gettext-tools/gnulib-lib/Makefile.am (AM_CPPFLAGS): Remove
-I$(top_srcdir)/../gettext-runtime/intl.
* gettext-tools/gnulib-tests/Makefile.am (AM_CPPFLAGS): Update comment.
* gettext-tools/src/Makefile.am (AM_CPPFLAGS): Add comment.
* gettext-tools/libgettextpo/Makefile.am (AM_CPPFLAGS): Likewise.
* libtextstyle/lib/Makefile.am (AM_CPPFLAGS): Remove -I$(top_srcdir).

--- a/gettext-tools/gnulib-lib/Makefile.am
+++ b/gettext-tools/gnulib-lib/Makefile.am
@@ -36,8 +36,8 @@ pkgdata_DATA =
 
 AM_CPPFLAGS =
 
-# Hmm... is this still necessary?
-AM_CPPFLAGS += -I$(top_builddir)/../gettext-runtime/intl -I$(top_srcdir)/../gettext-runtime/intl
+# Needed for the gnulib source code that does '#include "gettext.h"'.
+AM_CPPFLAGS += -I../../gettext-runtime/intl
 # Needed so that config.h and woe32dll/export.h are found.
 AM_CPPFLAGS += -I$(top_builddir) -I$(top_srcdir)
 
