build: Use a separate gnulib-tool invocation for gettext-tools/tests/.
* autogen.sh (GNULIB_MODULES_LIBGETTEXTLIB, GNULIB_MODULES_TOOLS_TESTS): New
variables.
Add a gnulib-tool invocation for gettext-tools/tests/gnulib-{m4,lib}.
Add option -I tests/gnulib-m4 when generating gettext-tools/configure.
* gettext-tools/tests/gnulib-lib/Makefile.am: New file.
* gettext-tools/tests/Makefile.am (SUBDIRS): New variable.
(AM_CPPFLAGS): Add more -I options.
(EXTRA_DIST): Add gnulib-m4/gnulib-cache.m4.
* gettext-tools/Makefile.am (ACLOCAL_AMFLAGS): Add -I tests/gnulib-m4.
* gettext-tools/configure.ac: Invoke gttgl_EARLY and gttgl_INIT. Add an
AC_CONFIG_FILES of tests/gnulib-lib/Makefile.

--- a/.gitignore
+++ b/.gitignore
@@ -361,6 +361,9 @@
 /gettext-tools/libgrep/windows-initguard.h
 /gettext-tools/libgrep/wcrtomb.c
 /gettext-tools/man/x-to-1.in
+/gettext-tools/tests/gnulib-m4/
+/gettext-tools/tests/gnulib-lib/
+!/gettext-tools/tests/gnulib-lib/Makefile.am
 /gettext-tools/tests/init.sh
 
 # Files brought in by "automake --add-missing --copy":
