build: Use $(PATH_SEPARATOR) as a path separator
':' is not a path separator on Windows and OS/2.

PATH_SEPARATOR is defined and AC_SUBSTed by Autoconf.

* gettext-tools/examples/po/Makefile.am (USE_BUILT_PROGS): Use
$(PATH_SEPARATOR) instead of ':'.

Copyright-paperwork-exempt: Yes

--- a/gettext-tools/examples/po/Makefile.am
+++ b/gettext-tools/examples/po/Makefile.am
@@ -237,7 +237,7 @@ $(DOMAIN).pot-update: $(POTFILES_DEPS) $(SMALLPOTS) remove-potcdate.sed
 # The environment variable 'gettext_datadir' is used by autopoint.
 # The environment variable 'GETTEXTDATADIR' is used by xgettext.
 USE_BUILT_PROGS = \
-  PATH="`pwd`/../../src:`pwd`/../../misc:$$PATH"; \
+  PATH="`pwd`/../../src$(PATH_SEPARATOR)`pwd`/../../misc$(PATH_SEPARATOR)$$PATH"; \
   gettext_datadir="`pwd`/../../misc"; export gettext_datadir; \
   GETTEXTDATADIR="`cd '$(srcdir)/../..' && pwd`"; export GETTEXTDATADIR;
 
