libgettextpo: Remove static variable 'directory'.
* gettext-tools/src/read-catalog-file.h: New file, extracted from
gettext-tools/src/read-catalog.h.
* gettext-tools/src/read-catalog.h (read_catalog_file): Remove declaration.
* gettext-tools/src/read-catalog-file.c: New file, extracted from
gettext-tools/src/read-catalog.c.
* gettext-tools/src/read-catalog.c: Don't include open-catalog.h.
(read_catalog_file): Remove function.
* gettext-tools/src/msgl-cat.c: Include read-catalog-file.h instead of
read-catalog.h.
* gettext-tools/src/msgattrib.c: Likewise.
* gettext-tools/src/msgcmp.c: Likewise.
* gettext-tools/src/msgconv.c: Likewise.
* gettext-tools/src/msgen.c: Likewise.
* gettext-tools/src/msgexec.c: Likewise.
* gettext-tools/src/msgfilter.c: Likewise.
* gettext-tools/src/msgfmt.c: Likewise.
* gettext-tools/src/msggrep.c: Likewise.
* gettext-tools/src/msginit.c: Likewise.
* gettext-tools/src/msgmerge.c: Likewise.
* gettext-tools/src/FILES: Mention read-catalog-file.h, read-catalog-file.c.
* gettext-tools/src/Makefile.am (noinst_HEADERS): Add read-catalog-file.h.
(libgettextsrc_la_SOURCES): Add read-catalog-file.c.
* gettext-tools/libgettextpo/Makefile.am (libgettextpo_la_AUXSOURCES): Remove
dir-list.c, open-catalog.c.

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -38,7 +38,7 @@ lib_LTLIBRARIES = libgettextsrc.la
 noinst_HEADERS = \
   pos.h message.h po-error.h po-xerror.h po-gram.h po-charset.h \
   po-lex.h open-catalog.h read-catalog-abstract.h read-catalog.h \
-  read-po.h read-properties.h read-stringtable.h \
+  read-catalog-file.h read-po.h read-properties.h read-stringtable.h \
   str-list.h \
   write-catalog.h write-po.h write-properties.h write-stringtable.h \
   dir-list.h file-list.h po-gram-gen.h po-gram-gen2.h cldr-plural.h \
@@ -131,9 +131,9 @@ CSHARPCOMPFLAGS = @CSHARPCOMPFLAGS@
 # read-csharp.c and read-resources.c.)
 # message.c -> str-list.c.
 # (read-catalog-abstract.c <--> po-gram-gen.y <--> po-lex.c) -> str-list.c.
-# (read-catalog-abstract.c <--> po-gram-gen.y <--> po-lex.c) -> open-catalog.c -> dir-list.c -> str-list.c.
 # (read-catalog-abstract.c <--> po-gram-gen.y <--> po-lex.c) -> po-charset.c.
 # (read-catalog-abstract.c <--> po-gram-gen.y <--> po-lex.c) -> message.c -> str-list.c.
+# read-catalog-file.c -> open-catalog.c -> dir-list.c -> str-list.c.
 COMMON_SOURCE = message.c pos.c po-error.c po-xerror.c \
 read-catalog-abstract.c po-lex.c po-gram-gen.y po-charset.c \
 read-po.c read-properties.c read-stringtable.c open-catalog.c \
@@ -180,7 +180,7 @@ FORMAT_SOURCE += \
 # libgettextsrc contains all code that is needed by at least two programs.
 libgettextsrc_la_SOURCES = \
   $(COMMON_SOURCE) \
-  read-catalog.c \
+  read-catalog.c read-catalog-file.c \
   write-catalog.c write-properties.c write-stringtable.c write-po.c \
   msgl-ascii.c \
   msgl-ofn.c \
