libgettextpo: Remove static variable bullet_stack.
* gettext-tools/src/xg-check.h: New file, extracted from
gettext-tools/src/msgl-check.h.
* gettext-tools/src/xg-check.c: New file, extracted from
gettext-tools/src/msgl-check.c.
* gettext-tools/src/msgl-check.h (syntax_check_message_list): Remove
declaration.
* gettext-tools/src/msgl-check.c: Don't include quote.h, sentence.h, unictype.h,
unistr.h.
(struct callback_arg, struct bullet_ty, struct bullet_stack_ty,
syntax_check_function): Remove types.
(bullet_stack, sc_funcs): Remove variables.
(syntax_check_ellipsis_unicode, syntax_check_space_ellipsis,
syntax_check_quote_unicode_callback, syntax_check_quote_unicode,
syntax_check_bullet_unicode, syntax_check_message, syntax_check_message_list):
Remove functions.
* gettext-tools/src/xgettext.c: Include xg-check.h instead of msgl-check.h.
* gettext-tools/src/Makefile.am (noinst_HEADERS): Add xg-check.h.
(xgettext_SOURCES): Add xg-check.c.
* gettext-tools/src/FILES: Mention xg-check.h, xg-check.c.
* gettext-tools/po/POTFILES.in: Add src/xg-check.c.

--- a/gettext-tools/po/POTFILES.in
+++ b/gettext-tools/po/POTFILES.in
@@ -1,5 +1,5 @@
 # List of files which contain translatable strings.
-# Copyright (C) 1995, 1998, 2001-2006, 2011, 2020, 2022 Free Software Foundation, Inc.
+# Copyright (C) 1995-2023 Free Software Foundation, Inc.
 # This file is free software, distributed under GNU GPL v3+.
 
 # For updating this file, look at the result of:
@@ -120,6 +120,7 @@ src/x-csharp.c
 src/x-desktop.c
 src/x-elisp.c
 src/xg-arglist-parser.c
+src/xg-check.c
 src/xg-encoding.c
 src/xgettext.c
 src/xg-message.c
