build: Fix a build issue on AIX.
How to reproduce:
$ cd gettext-20231111
$ ~/build-64-gcc --disable-shared
$ (cd build-64-gcc && gmake install)
$ cd ..
$ cd gettext-0.22.3
$ ~/build-64-gcc
=> Fails with "ERROR: Undefined symbol: .syntax_check_message_list"
because the link uses $PREFIX/lib/libgettextsrc.a, which is a non-shared
library that does not export 'syntax_check_message_list'.

* gettext-tools/configure.ac (INSTALL_PRIVATE_LIBRARIES): New conditional.
* gettext-tools/src/Makefile.am (noinst_LTLIBRARIES): Define as alternative to
lib_LTLIBRARIES.
(install-exec-clean): Remove rule.
* gettext-tools/gnulib-lib/Makefile.am (lib_LTLIBRARIES): Initialize.
* gnulib-local/modules/gettext-tools-misc (Makefile.am): Define
noinst_LTLIBRARIES as alternative to lib_LTLIBRARIES. Remove
'install-exec-clean' rule.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -129,6 +129,13 @@ case "$host_os" in
 esac
 AM_CONDITIONAL([WINDOWS_NATIVE], [test $is_windows_native = yes])
 
+dnl Package-private libraries do not need to be installed when we build only
+dnl static libraries. Don't install them in this case. This avoids a build
+dnl error on AIX with --enable-shared, when some other version of GNU gettext,
+dnl built with --disable-shared, is already installed in the same $prefix and
+dnl the CFLAGS or LDFLAGS happen to contain "-L$prefix/lib".
+AM_CONDITIONAL([INSTALL_PRIVATE_LIBRARIES], [test "$enable_shared" = yes])
+
 dnl Checks for libraries.
 
 dnl These are the only lines required to internationalize the package.
