Update after gnulib changed.

--- a/.gitignore
+++ b/.gitignore
@@ -190,7 +190,7 @@
 /gettext-tools/libgettextpo/msvc-nothrow.h
 /gettext-tools/libgettextpo/noreturn.h
 /gettext-tools/libgettextpo/obstack.c
-/gettext-tools/libgettextpo/obstack.h
+/gettext-tools/libgettextpo/obstack.in.h
 /gettext-tools/libgettextpo/open.c
 /gettext-tools/libgettextpo/pathmax.h
 /gettext-tools/libgettextpo/printf-args.c
@@ -241,6 +241,7 @@
 /gettext-tools/libgettextpo/strerror-override.c
 /gettext-tools/libgettextpo/strerror-override.h
 /gettext-tools/libgettextpo/strerror.c
+/gettext-tools/libgettextpo/strerror_r.c
 /gettext-tools/libgettextpo/striconv.c
 /gettext-tools/libgettextpo/striconv.h
 /gettext-tools/libgettextpo/striconveh.c
@@ -871,6 +872,7 @@ core
 /gettext-tools/libgettextpo/inttypes.h
 /gettext-tools/libgettextpo/limits.h
 /gettext-tools/libgettextpo/locale.h
+/gettext-tools/libgettextpo/obstack.h
 /gettext-tools/libgettextpo/signal.h
 /gettext-tools/libgettextpo/stdarg.h
 /gettext-tools/libgettextpo/stdbool.h
