build: Obey --disable-threads also regarding msgmerge and OpenMP.
* gettext-tools/configure.ac: If --disable-threads was specified, just set
OPENMP_CFLAGS to empty.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -214,7 +214,11 @@ fi
 AC_SUBST([MSGMERGE_LIBM])
 
 dnl Test whether msgmerge can make use of OpenMP.
-AC_OPENMP
+if test "$gl_use_threads" != no; then
+  AC_OPENMP
+else
+  OPENMP_CFLAGS=
+fi
 
 dnl Checks for header files, functions and declarations.
 gl_INIT
