xgettext: Java: Flag strings on which the method 'formatted' is used as java-printf-format.
* gettext-tools/src/x-java.c (token_type_semicolon): New enum item.
(phase5_get): Recognize semicolon tokens.
(extract_parenthesized): Handle method invocation .formatted. Return when a
semicolon was seen.
* gettext-tools/tests/xgettext-java-8: New file, based on
gettext-tools/tests/xgettext-vala-6.
* gettext-tools/tests/xgettext-java-9: New file, based on
gettext-tools/tests/xgettext-vala-7.
* gettext-tools/tests/Makefile.am (TESTS): Add them.
* NEWS: Mention the change.

--- a/gettext-tools/tests/Makefile.am
+++ b/gettext-tools/tests/Makefile.am
@@ -110,7 +110,8 @@ TESTS = gettext-1 gettext-2 \
 	xgettext-gsettings-1 \
 	xgettext-its-1 xgettext-its-2 \
 	xgettext-java-1 xgettext-java-2 xgettext-java-3 xgettext-java-4 \
-	xgettext-java-5 xgettext-java-6 xgettext-java-7 \
+	xgettext-java-5 xgettext-java-6 xgettext-java-7 xgettext-java-8 \
+	xgettext-java-9 \
 	xgettext-java-stackovfl-1 xgettext-java-stackovfl-2 \
 	xgettext-java-stackovfl-3 xgettext-java-stackovfl-4 \
 	xgettext-javascript-1 xgettext-javascript-2 xgettext-javascript-3 \
